(data_only_dirs libdalek_rs)

;(library
; (name dalek)
; (public_name dalek)
; (modules binding)
; (libraries alien_ffi bigstring unix threads)
; (library_flags :standard -linkall))

(executable
 (public_name main)
 (modules main binding)
 (libraries alien_ffi bigstring unix threads)
 (link_deps libdalek_rs.a)
 (link_flags -linkall -thread -ccopt -pthread /Users/andras/o-d/src/libdalek_rs/target/release/libdalek_rs.a /Users/andras/.opam/5.0.0~beta1/lib/alien_ffi/c/libalien_ffi_c_stubs.a))

(rule
 (targets libdalek_rs.a dlldalek_rs.dylib)
 (deps (source_tree libdalek_rs))
 (action
  (bash
   "\nmake -C libdalek_rs\n
    \ncp libdalek_rs/target/release/libdalek_rs.a libdalek_rs.a\n
    \ncp libdalek_rs/target/release/libdalek_rs.dylib dlldalek_rs.dylib\n")))
